Update the styles for action buttons

--- a/client/src/app/pages/positions/position-templates/position-templates.component.html
+++ b/client/src/app/pages/positions/position-templates/position-templates.component.html
@@ -23,7 +23,7 @@
               </div>
             </div>
             <div class="template-select">
-              <action-button type="flat" color="primary" title="Select Template" (click)="selectTemplate(i)"></action-button>
+              <action-button class="select-template" type="flat" color="primary" title="Select Template" (click)="selectTemplate(i)"></action-button>
             </div>
           </div>
 
@@ -79,7 +79,7 @@
               </div>
             </div>
             <div class="template-select">
-              <action-button type="flat" color="primary" title="Select Position" (click)="selectPosition(i)"></action-button>
+              <action-button class="select-template" type="flat" color="primary" title="Select Position" (click)="selectPosition(i)"></action-button>
             </div>
           </div>
 
