--- a/client/src/app/components/positions-details/positions-details.component.html
+++ b/client/src/app/components/positions-details/positions-details.component.html
@@ -168,7 +168,7 @@
                 </li>
                 <li>
                   <img src="assets/icons/ic_clock.svg">
-                  <span class="image"> {{differenceInDays}} days ago</span>
+                  <span class="image">{{helperService.convertToDays(info.post_date)}}</span>
                 </li>
                 <li>
                   <span class="recruiter-text">Recruiter</span>&nbsp;
