--- a/client/src/app/pages/positions/position-search/position-search.component.html
+++ b/client/src/app/pages/positions/position-search/position-search.component.html
@@ -387,7 +387,7 @@
             </div>
           </div>
           <div class="show-button">
-            <action-button routerLink="." type="text" title="{{!job.showMoreFlag ? 'Show More' :
+            <action-button type="text" title="{{!job.showMoreFlag ? 'Show More' :
                     'Show Less'}}" color="primary" (click)="job.showMoreFlag = !job.showMoreFlag"></action-button>
             &nbsp;&nbsp;
             <action-button type="text" title="Go to Details Page" color="primary"
