--- a/client/src/app/pages/application/application-detail/application-position-information/application-position-information.component.scss
+++ b/client/src/app/pages/application/application-detail/application-position-information/application-position-information.component.scss
@@ -9,13 +9,13 @@ $profile-form-field-mt: 30px;
   background-color: transparent;
   .career-main {
     float: right;
-    width: 70%;
     padding-bottom: 80px;
+    width: 70.3%;
     background-color: $bg-color-1;
     .position-main-container {
       background-color: $bg-color-1;
       display: table;
-      width: 94%;
+      //width: 94%;
       margin: 0 auto;
 
       .position-list-container {
