UI Improvement and Functionality updated.

--- a/client/src/app/pages/application/application-detail/application-nav-section/application-nav-section.component.scss
+++ b/client/src/app/pages/application/application-detail/application-nav-section/application-nav-section.component.scss
@@ -461,7 +461,6 @@ $profile-form-field-mt: 30px;
         // margin-right: 10px;
         display: block;
         padding: 0px 20px;
-        float: right;
       }
     }
   }
@@ -743,7 +742,7 @@ $profile-form-field-mt: 30px;
       .filter-data {
         display: block;
         padding: 0px 20px;
-        float: right;
+        float: left;
       }
     }
   }
