--- a/client/src/app/pages/application/application-detail/profile-information/profile-information.component.html
+++ b/client/src/app/pages/application/application-detail/profile-information/profile-information.component.html
@@ -21,27 +21,27 @@
         </div>
         <div class="user-info">
           <ul>
-            <li>
-              <small *ngIf="generalInfo?.city || generalInfo?.state || generalInfo?.country">
+            <li *ngIf="generalInfo?.city || generalInfo?.state || generalInfo?.country">
+              <small>
                 <img src="assets/icons/ic_location.svg">
                 {{(generalInfo.city ? generalInfo.city : '') + (generalInfo.city && (generalInfo.state || generalInfo.country) ? ', ' : '') + (generalInfo.state ? generalInfo.state : '') + (generalInfo.state && generalInfo.country ? ', ' : '') + (generalInfo.country ? generalInfo.country : '')}}
               </small>
             </li>
-            <li>
-              <small *ngIf="generalInfo?.birthdate">
+            <li *ngIf="generalInfo?.birthdate">
+              <small >
                 <img src="assets/icons/ic_birthday-cake.svg">
                 {{helperService.convertToFormattedString(generalInfo.birthdate, 'll')}}
               </small>
             </li>
-            <li>
-              <small *ngIf="generalInfo?.gender">
+            <li *ngIf="generalInfo?.gender">
+              <small >
                 <img
                   src="{{generalInfo.gender === 'Male' ? 'assets/icons/ic_male.svg' : 'assets/icons/ic_female.svg'}}">
                 {{generalInfo.gender}}
               </small>
             </li>
-            <li>
-              <small *ngIf="generalInfo?.ethnicity">
+            <li *ngIf="generalInfo?.ethnicity">
+              <small >
                 <label>Ethnicity</label>
                 {{generalInfo.ethnicity}}
               </small>
@@ -63,7 +63,7 @@
   </div>
   <div class="position-list-container">
     <div>
-      <div class="row position-qualification-detail" id="qualification-level">
+      <div class="row position-qualification-detail" id="qualification-level" >
         <h3>Qualification Level Estimate Breakdown</h3>
         <div class="heading-row">
           <h5>Candidate Qualification Level Estimate</h5>
@@ -72,10 +72,11 @@
             </simple-tag>
           </div>
         </div>
-
-        <div>
+        <!-- this.positionName[0].true_fitscore_info.education_weight -->
+        <div  *ngIf=" positionName[0]?.minimum_skills?.length > 0 || positionName[0]?.true_fitscore_info?.skills_weight > 0 || positionName[0]?.true_fitscore_info?.education_weight > 0 || positionName[0]?.true_fitscore_info?.experience_weight > 0 || positionName[0]?.true_fitscore_info?.interests_weight > 0 ">
           <h5>Qualification Level Estimate Breakdown</h5>
-        <div class="position-qualification-skills" *ngFor="let score of positionName">
+        <div class="position-qualification-skills" *ngFor="let score of positionName" >
+          <div >
           <simple-tag *ngIf="score.true_fitscore_info?.skills_weight" type="gray" title="Skills Match" ellipseTag="true"
             value="{{mathFloor(6*score.true_fitscore_info?.skills_fitscore)}}">
           </simple-tag>
@@ -96,6 +97,7 @@
             N/A
           </p>
         </div>
+      </div>
       </div>
     </div>
       <div id="matched-skills" *ngIf="matchedSkills?.length > 0 || missingSkills?.length > 0">
@@ -173,7 +175,7 @@
               (click)="short_desc = !short_desc">{{short_desc ? 'Read More' : 'Read Less'}}</a>
           </ng-container>
         </div>
-        <div class="row position-eductaion-detail position-required-skills-detail" id="education" *ngIf="educationList">
+        <div class="row position-eductaion-detail position-required-skills-detail" id="education" *ngIf="educationList?.length > 0">
           <h3> Education </h3>
           <div class="education-level-m">
             <ng-container *ngFor="let education of educationList; let i = index">
@@ -202,7 +204,7 @@
             </ng-container>
           </div>
         </div>
-        <div class="row position-eductaion-detail position-required-skills-detail" id="work" *ngIf="experienceList">
+        <div class="row position-eductaion-detail position-required-skills-detail" id="work" *ngIf="experienceList?.length > 0">
           <h3>Work Experience</h3>
           <div class="education-level-m work-section" *ngFor=" let experience of experienceList; let i = index;">
             <h6 for="skill_required">{{experience.user_specified_company_name}}</h6>
@@ -262,7 +264,7 @@
           </div>
 
         </div>
-        <div class="row position-eductaion-detail position-required-skills-detail" id="skills" *ngIf="userSkillsList">
+        <div class="row position-eductaion-detail position-required-skills-detail" id="skills" *ngIf="userSkillsList?.length > 0">
           <h3> Skills </h3>
           <img src="assets/icons/ic_question.svg" class="question" (click)="openSkillDescriptionDialog()">
           <div class="education-level-m">
@@ -279,7 +281,7 @@
             </div>
           </div>
         </div>
-        <div class="row position-eductaion-detail position-required-skills-detail" id="interest" *ngIf="interestsList">
+        <div class="row position-eductaion-detail position-required-skills-detail" id="interest" *ngIf="interestsList?.length > 0">
           <h3> Interests </h3>
           <div class="education-level-m">
             <h5>Interests <span> {{ interestsList ? interestsList.length : '0' }}</span></h5>
@@ -296,7 +298,7 @@
           </div>
         </div>
         <div class="row position-eductaion-detail position-required-skills-detail" id="publications"
-          *ngIf="userPublicationsList">
+          *ngIf="userPublicationsList && userPublicationsList?.length > 0">
           <h3> Publications </h3>
           <div class="education-level-m">
             <ng-container *ngFor="let publication of userPublicationsList; let i = index;">
@@ -321,7 +323,7 @@
           </div>
         </div>
         <div class="row position-eductaion-detail position-required-skills-detail" id="project"
-          *ngIf="userProjectsList">
+          *ngIf="userProjectsList && userProjectsList?.length > 0">
           <h3> Projects </h3>
           <div class="education-level-m">
             <ng-container *ngFor="let project of userProjectsList; let i = index;">
