--- a/client/src/app/pages/application/application-detail/profile-information/profile-information.component.scss
+++ b/client/src/app/pages/application/application-detail/profile-information/profile-information.component.scss
@@ -24,6 +24,7 @@ $profile-form-field-mt: 30px;
         flex-direction: column;
         flex: 1;
         margin-left: 30px; // removing image margin-right adding left here
+        width: 52%;
 
         h1 {
           font-family: "Poppins", sans-serif;
@@ -193,6 +194,7 @@ $profile-form-field-mt: 30px;
           margin-bottom: 5px;
           opacity: 0.84;
           line-height: 25px;
+          font-family: "Poppins", sans-serif;
           &.detail-info__left-top {
             float: left;
           }
@@ -863,7 +865,7 @@ $profile-form-field-mt: 30px;
             // margin-bottom: 18px;
           }
           h3 {
-            font-size: 18px;
+            font-size: 20px;
           }
 
           & .position-right {
@@ -930,7 +932,7 @@ $profile-form-field-mt: 30px;
       }
 
       .user-row {
-        text-align: center;
+        text-align: left;
         .user-detail {
           display: block;
           margin-left: 0;
