--- a/client/src/app/pages/positions/position-templates/position-templates.component.scss
+++ b/client/src/app/pages/positions/position-templates/position-templates.component.scss
@@ -59,8 +59,7 @@ a {
           font-size: 25px;
           line-height: 1.15;
           font-weight: 500;
-          margin-top: 40px;
-          margin-bottom: 20px;
+          margin: 30px auto;
           color: rgba(map-get($md-cfaccent, 500), .84);
           text-align: center;
         }
@@ -232,8 +231,7 @@ a {
           }
           h3.no-found {
             font-size: 20px;
-            margin-top: 30px;
-            margin-bottom: 20px;
+            margin: 25px auto;
           }
           .row {
             padding: 15px;
