0Request-reference page is implemented and UI improvement.

--- a/client/src/app/pages/application/application-detail/application-header-section/application-header-section.component.scss
+++ b/client/src/app/pages/application/application-detail/application-header-section/application-header-section.component.scss
@@ -23,6 +23,7 @@ $profile-form-field-mt: 30px;
           line-height: 34px;
           opacity: 0.84;
           margin: 13px auto 5px;
+          font-family: "Poppins", sans-serif;
         }
       }
       & .application-header-btn-style {
