--- a/client/src/app/pages/application/application-detail/application-cover-letter/application-cover-letter.component.scss
+++ b/client/src/app/pages/application/application-detail/application-cover-letter/application-cover-letter.component.scss
@@ -22,6 +22,7 @@ $profile-form-field-mt: 30px;
         opacity: 0.84;
         margin-top: 0;
         float: left;
+        font-family: "Poppins", sans-serif;
       }
       & .application-edit {
         display: flex;
