--- a/client/src/app/pages/application/application-detail/application-position-information/application-position-information.component.html
+++ b/client/src/app/pages/application/application-detail/application-position-information/application-position-information.component.html
@@ -38,7 +38,7 @@
                 </li>
                 <li>
                   <img src="assets/icons/ic_clock.svg">
-                  <span class="image"> {{helperService.convertToDays(info.post_date)}} days ago</span>
+                  <span class="image"> {{helperService.convertToDays(info.post_date)}}</span>
                 </li>
                 <li>
                   <span class="recruiter-text">Recruiter</span>&nbsp;
