--- a/client/src/app/pages/application/application-detail/application-references/application-references.component.html
+++ b/client/src/app/pages/application/application-detail/application-references/application-references.component.html
@@ -7,7 +7,7 @@
 <div class="application-references">
   <div class="row">
     <div class="edit-title">
-      <a>Request Reference</a>
+      <a (click)="openInterestLevelDialog()">Request Reference</a>
     </div>
 
     <h1 class="title">References</h1>
