--- a/client/src/app/pages/application/application-detail/application-references/application-references.component.scss
+++ b/client/src/app/pages/application/application-detail/application-references/application-references.component.scss
@@ -33,9 +33,10 @@
         color: #001d40;
         font-weight: 400;
         margin-bottom: 10px;
+        display: inline-block;
       }
       p {
-        margin-top: 10px;
+        margin-top: 0;
         margin-bottom: 10px;
         font-size: 16px;
         line-height: 24px;
